[gd_scene load_steps=32 format=2]

[ext_resource path="res://script_chefe.gd" type="Script" id=1]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Walk (5).png" type="Texture" id=2]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Walk (4).png" type="Texture" id=3]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Walk (10).png" type="Texture" id=4]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (5).png" type="Texture" id=5]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Walk (6).png" type="Texture" id=6]
[ext_resource path="res://recursos/imagens/Outros/1071208.png" type="Texture" id=7]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Walk (3).png" type="Texture" id=8]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (6).png" type="Texture" id=9]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (9).png" type="Texture" id=10]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (2).png" type="Texture" id=11]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (12).png" type="Texture" id=12]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (8).png" type="Texture" id=13]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Walk (9).png" type="Texture" id=14]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (11).png" type="Texture" id=15]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (7).png" type="Texture" id=16]
[ext_resource path="res://recursos/fontes/njnaruto.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Walk (7).png" type="Texture" id=18]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (4).png" type="Texture" id=19]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (10).png" type="Texture" id=20]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (3).png" type="Texture" id=21]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Dead (1).png" type="Texture" id=22]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Walk (2).png" type="Texture" id=23]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Walk (1).png" type="Texture" id=24]
[ext_resource path="res://recursos/imagens/personagens/inimigo/Walk (8).png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 20 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ) ],
"loop": false,
"name": "morrendo",
"speed": 10.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 23 ), ExtResource( 8 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 18 ), ExtResource( 25 ), ExtResource( 14 ), ExtResource( 4 ) ],
"loop": true,
"name": "andando",
"speed": 18.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38.0141, 80.6583 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40.0907, 81.179 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 1, 0.0156863, 1 )

[sub_resource type="DynamicFont" id=6]
size = 5
use_mipmaps = true
use_filter = true
font_data = ExtResource( 17 )

[node name="Node2D" type="Node2D"]

[node name="Chefe" type="KinematicBody2D" parent="."]
position = Vector2( 1.25378, -1.38473 )
scale = Vector2( 3.46081, 3.46081 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Chefe"]
position = Vector2( 0.561234, -1.12246 )
scale = Vector2( 0.371872, 0.371873 )
frames = SubResource( 1 )
animation = "andando"
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chefe"]
position = Vector2( -1.12247, 0.336617 )
shape = SubResource( 2 )

[node name="pe_esquerdo" type="Area2D" parent="Chefe"]
position = Vector2( -53.615, 104.326 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chefe/pe_esquerdo"]
shape = SubResource( 3 )

[node name="pe_direito" type="Area2D" parent="Chefe"]
position = Vector2( 53.3289, 104.77 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chefe/pe_direito"]
shape = SubResource( 3 )

[node name="Ataque" type="Area2D" parent="Chefe"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chefe/Ataque"]
position = Vector2( -0.68874, -0.86225 )
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="Chefe"]
position = Vector2( 34.2867, 77.1452 )

[node name="Timer" type="Timer" parent="Chefe"]
wait_time = 10.0
autostart = true

[node name="Vida" type="ProgressBar" parent="Chefe"]
margin_left = -31.3223
margin_top = -91.4834
margin_right = 25.6777
margin_bottom = -84.4834
custom_styles/fg = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
step = 1.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="Chefe/AnimatedSprite" to="Chefe" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_exited" from="Chefe/pe_esquerdo" to="Chefe" method="_on_pe_esquerdo_body_exited"]
[connection signal="body_exited" from="Chefe/pe_direito" to="Chefe" method="_on_pe_direito_body_exited"]
[connection signal="body_entered" from="Chefe/Ataque" to="Chefe" method="_on_Ataque_body_entered"]
[connection signal="timeout" from="Chefe/Timer" to="Chefe" method="_on_Timer_timeout"]
